# data-analysis-tools-fdx

./: README.md  pyproject.toml  setup.cfg  setup.py  tea.yaml
data/analysis/tool/: fasttext_tool.py
