[metadata]
name = data-analysis-tools-fdx
version = 0.0.2
author = Jane-Dream
author_email = janedream515@gmail.com
description = A data processor package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jane-Dream/data-analysis-tools-fdx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.24.0
    jieba>=0.42.1
    setuptools>=42
    fasttext-wheel>=0.9.2
    numpy>=1.24.4
    data-analysis-tools-jms-diy>=0.0.1
